Proovime panna rakendust adekvaatselt reageerima olematu kaardi avamise katsetele + pealkiri kaardi kohal

--- a/src/app/kaart/kaart.component.html
+++ b/src/app/kaart/kaart.component.html
@@ -1,4 +1,4 @@
-<p>kaart {{currentMap.title}} works!</p>
+<h1>{{currentMap.title}}</h1>
 <div class="container">
   <div class="row">
     <div class="col-9"><a (click)="setSidebar(true)"><img (load)="setSidebar(sidebar)"
