--- a/src/app/kaart/kaart.component.html
+++ b/src/app/kaart/kaart.component.html
@@ -1,4 +1,5 @@
 <h1>{{currentMap.title}}</h1>
+<p style="color:red" id="nomap">{{nomap}}</p>
 <div class="container">
   <div class="row">
     <div class="col-9"><a (click)="setSidebar(true)"><img (load)="setSidebar(sidebar)"
@@ -8,6 +9,10 @@
       <ul>
         <li *ngFor="let item of getMapList()">
           <h3><a (click)="setSidebar(true)" href="{{item.path}}">{{item.title}}</a>
+          </h3>
+        </li>
+        <li>
+          <h3><a (click)="setSidebar(true)" href="olematu">Olematu</a>
           </h3>
         </li>
       </ul>
